payment/payment-k8/payment-deployment.yaml
apiVersion: apps/v1beta2
kind: Deployment
metadata:
  name: paymentms-deploy
  namespace: shoppingportal
spec:
  replicas: 1
  selector:
    matchLabels:
      name: paymentms
      zone: prod
  minReadySeconds: 10
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 1
      maxSurge: 1
  template:
    metadata:
      labels:
        name: paymentms
        version: v1
        release: stable
        tier: be
        zone: prod
        managed-by: m2
    spec:
      containers:
        - name: paymentms-ctr
          image: metamagicglobal/paymentservice_k8
          imagePullPolicy: Always
          ports:
          - containerPort: 8082
