payment/payment-k8/payment-ms-dep.yaml
apiVersion: apps/v1beta2
kind: Deployment
metadata:
  name: paymentms-deploy
  namespace: shoppingportal
spec:
  replicas: 1
  selector:
    matchLabels:
      zone: prod
      app: paymentms
  minReadySeconds: 10
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 1
      maxSurge: 1
  template:
    metadata:
      labels:
        version: v1
        release: stable
        tier: be
        zone: prod
        managed-by: m2
        app: paymentms
    spec:
      containers:
        - name: paymentms-ctr
          image: metamagicglobal/paymentservice_k8
          imagePullPolicy: IfNotPresent
          ports:
          - containerPort: 8082
