payment/payment-k8/payment_ui_dep.yml
apiVersion: apps/v1beta2
kind: Deployment
metadata:
  name: paymentui-deploy
  namespace: shoppingportal
spec:
  replicas: 1
  selector:
    matchLabels:
      zone: prod
      app: paymentui
  minReadySeconds: 10
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 1
      maxSurge: 1
  template:
    metadata:
      labels:
        version: "1.0.0"
        release: stable
        tier: fe
        zone: prod
        managed-by: m2
        app: paymentui
    spec:
      containers:
        - name: paymentui-ctr
          image: metamagicglobal/paymentui:k8 
          imagePullPolicy: IfNotPresent
          ports:
          - containerPort: 80
