payment/payment-k8/payment-ms-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: payment-svc
  namespace: shoppingportal
spec:
  selector: 
    app: paymentms
  ports:
  - protocol: TCP
    targetPort: 8082
    port: 80
    name: http
