payment/payment-k8/payment-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: payment-svc
  namespace: shoppingportal
spec:
  type: LoadBalancer
  selector: 
    name: paymentms
    app: paymentms
  ports:
  - protocol: TCP
    targetPort: 8082
    port: 80
    name: http
