payment/payment-k8/payment-virtualservice.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: payment-vs
  namespace: shoppingportal  
spec:
  gateways:
  - shoppingportal-gateway
  hosts:
   - "*"
  http:
  - match:
    - uri:
        prefix: /paymentms
    route:
    - destination:
        host: payment-svc.shoppingportal.svc.cluster.local
        port:
          number: 80
